# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-09 15:54:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35

    Summary:
      merge html fixes from the 0.8 branch
    Revision:
      itools--main--0.9--patch-35

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-89
       html, add non standard "embed" empty tag
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-90
       html, detect source encoding
    

    modified files:
     Changelog html/HTML.py html/parser.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-89
     jdavid@itaapy.com--public/itools--main--0.8--patch-90


2005-05-09 11:12:03 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34

    Summary:
      merge igettext fix from the 0.8 branch
    Revision:
      itools--main--0.9--patch-34

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-88
       i18n, fix "igettext --pot"
    

    modified files:
     Changelog i18n/igettext.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-88


2005-05-08 14:31:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-33

    Summary:
      handlers, fix "KeyValue"
    Revision:
      itools--main--0.9--patch-33


    modified files:
     Changelog handlers/KeyValue.py


2005-05-07 19:29:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-32

    Summary:
      merge fixes from the 0.8 branch
    Revision:
      itools--main--0.9--patch-32

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-85
       xhtml, fix "get_messages"
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-87
       i18n, fix igettext
    

    modified files:
     Changelog i18n/igettext.py xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-85