@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-09 19:09:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-36
+
+    Summary:
+      types, add "Boolean.to_unicode"
+    Revision:
+      itools--main--0.9--patch-36
+
+
+    modified files:
+     Changelog types/__init__.py
+
+
 2005-05-09 15:54:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35
 
     Summary:
